--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,20 +1,39 @@
+/*** variables ***/
+
+$sans-serif: "Tahoma", "Geneva", sans-serif;
+
+$list-bg-color: rgba(255,152,0,1);
+$list-color: #fff59d;
+$list-hover-color: #FFC107;
+$list-selected-color: #e65100;
+
+$cat-detail-bg-color: rgba(0,188,212,1);
+
+
 * {
     box-sizing: border-box;
 }
-body {  }
+
+body { 
+	font-family: $sans-serif;
+}
+
 main {
 	max-width: 1080px;
 	min-width: 720px;
 	margin-left: auto;
 	margin-right: auto;
 }
+
 h2, h3, h4 {
 	margin: 0;
 	padding: 5px 0 5px 0;
 }
+
 img {
 	width:640px;
 }
+
 footer {
 	clear: all;
 	float: left;
@@ -24,70 +43,83 @@ footer {
 	text-align: center;
 	padding: 20px 0 20px 0;
 }
+
 input {
 	font-size: 18px;
 	padding: 10px 10px;
     margin: 8px 0;
     display: inline-block;
+
+    &[type="text"] {
+	    width: 40%;
+	    float: left;
+	    margin-right: 5px; 
+	}
+
+    &[type="button"] {
+    	width: 15%;
+	    border: 1px solid gray;
+	    text-decoration: none!important;
+	    background-color: #fff;
+	    cursor: pointer;
+	    float: right;
+    }
 }
-input[type=text] {
-    width: 40%;
-    float: left;
-    margin-right: 5px; 
-}
-input[type=button] {
-	width: 15%;
-    border: 1px solid gray;
-    text-decoration: none!important;
-    background-color: #fff;
-    cursor: pointer;
-    float: right;
-}
+
 .new-cat, footer, .cat-view-container {
 	overflow: auto;
 	margin: 10px 0 10px 0;
 }
+
 .cat-list-container {
 	height:100%;
     width: 25%;
     float: left;
-    background: rgba(255,152,0,1);
-    color: #fff59d;
+    background: $list-bg-color;
+    color: $list-color;
+
+	ul {
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 10px;
+
+	    li {
+		    padding: 8px;
+
+		    &:hover {
+				background-color: $list-hover-color;
+			}
+		}
+	}
 }
+
 .cat-details {
     width: 75%;
     float: left;
 }
+
 .cat-preview {
 	margin: 0 0 0 5px;
-	background-color: rgba(0,188,212,1);
+	background-color: $cat-detail-bg-color;
 }
-.cat-list-container ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 10px;
-}
-.cat-list-container li {
-    padding: 8px;
-}
-li:hover {
-	background-color: #FFC107;
-}
+
 .white {
 	color: #fff;
 	text-align: center;
 }
+
 li::before {
 	content: "";
 	width:12px;
     height:12px;
-    background: #fff59d;    
+    background: $list-color;    
     margin-right:5px; 
     display:inline-block;
 }
+
 li.selected::before {
 	background: #e65100;
 	width: 11px;
     height: 11px;
-	border: 1px solid #fff59d;
+	border: 1px solid $list-color;
 }
